[gd_scene load_steps=17 format=3 uid="uid://jbfnxi8gvc8j"]

[ext_resource type="Script" path="res://v_box_container.gd" id="1_edlap"]
[ext_resource type="Texture2D" uid="uid://c0y6mku1ed1r2" path="res://recursos/Menu/Babelki_FondoMenu.png" id="1_qc6jw"]
[ext_resource type="AudioStream" uid="uid://qxbngn7lcq8i" path="res://recursos/musica/grabaci贸n chiquisienta.mp3" id="2_udeox"]
[ext_resource type="Texture2D" uid="uid://ck5ksi3y0ldfg" path="res://recursos/Menu/Babelki_BotonInicio.png" id="3_ybweo"]
[ext_resource type="Texture2D" uid="uid://tq43vnuw3wm5" path="res://recursos/Menu/Babelki_BotonCreditos.png" id="4_m7wyl"]
[ext_resource type="Texture2D" uid="uid://bn83tlwg76ebf" path="res://recursos/Menu/Babelki_Boton.png" id="4_pj4q2"]
[ext_resource type="Texture2D" uid="uid://dkje73sr6xk8v" path="res://recursos/Menu/Babelki_BotonSalir.png" id="5_m57dq"]
[ext_resource type="AudioStream" uid="uid://dn5cynulu7ilm" path="res://recursos/musica/bot贸n 2.mp3" id="5_vivqu"]
[ext_resource type="Script" path="res://ocultar_boton.gd" id="9_38eui"]
[ext_resource type="Texture2D" uid="uid://b1r3dk5kfvktc" path="res://recursos/Menu/comojugar/ComoJugar1.jpg" id="10_6yw2w"]
[ext_resource type="Texture2D" uid="uid://cob2ky6eafkrh" path="res://recursos/Menu/comojugar/ComoJugar2.jpg" id="11_y58wi"]

[sub_resource type="Animation" id="Animation_mv4t7"]
resource_name = "ComoJugar"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2000, 170), Vector2(1170, 170)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuPrincipal/Tutorial/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["OBJETIVO"]
}

[sub_resource type="Animation" id="Animation_41488"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2012, 169)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2009, 161)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuPrincipal/Tutorial/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["COMO JUGAR"]
}

[sub_resource type="Animation" id="Animation_r8p3r"]
resource_name = "Objetico"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2000, 170), Vector2(1170, 170)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuPrincipal/Tutorial/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["ENTENDIDO"]
}

[sub_resource type="Animation" id="Animation_a44aj"]
resource_name = "guardar"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1170, 170), Vector2(2000, 170)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1170, 170), Vector2(2000, 170)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuPrincipal/Tutorial/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["COMO JUGAR"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l53yk"]
_data = {
"ComoJugar": SubResource("Animation_mv4t7"),
"Objetivo": SubResource("Animation_r8p3r"),
"RESET": SubResource("Animation_41488"),
"guardar": SubResource("Animation_a44aj")
}

[node name="Main_Menu" type="TextureRect"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="BabelkiFondoMenu" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_qc6jw")

[node name="Grabaci贸nChiquisienta" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_udeox")
volume_db = -20.0
autoplay = true
bus = &"Musica"

[node name="MenuPrincipal" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -150.0
offset_right = 528.0
offset_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_edlap")

[node name="Inicio" type="Button" parent="MenuPrincipal"]
layout_mode = 2
icon = ExtResource("3_ybweo")
flat = true

[node name="Opciones" type="TextureButton" parent="MenuPrincipal"]
layout_mode = 2
texture_normal = ExtResource("4_pj4q2")
texture_pressed = ExtResource("4_pj4q2")
texture_hover = ExtResource("4_pj4q2")
texture_disabled = ExtResource("4_pj4q2")
texture_focused = ExtResource("4_pj4q2")

[node name="Label" type="Label" parent="MenuPrincipal/Opciones"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -233.5
offset_right = 233.5
offset_bottom = 143.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.145098, 0.34902, 0.407843, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 104
text = "OPCIONES"

[node name="Bot贸n2" type="AudioStreamPlayer" parent="MenuPrincipal"]
stream = ExtResource("5_vivqu")

[node name="Creditos" type="Button" parent="MenuPrincipal"]
layout_mode = 2
icon = ExtResource("4_m7wyl")
flat = true

[node name="Tutorial" type="TextureButton" parent="MenuPrincipal"]
layout_mode = 2
texture_normal = ExtResource("4_pj4q2")
texture_pressed = ExtResource("4_pj4q2")
texture_hover = ExtResource("4_pj4q2")
texture_disabled = ExtResource("4_pj4q2")
texture_focused = ExtResource("4_pj4q2")

[node name="Label" type="Label" parent="MenuPrincipal/Tutorial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -233.5
offset_right = 233.5
offset_bottom = 143.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.145098, 0.34902, 0.407843, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 90
text = "COMO JUGAR"
horizontal_alignment = 1

[node name="Salir" type="Button" parent="MenuPrincipal"]
layout_mode = 2
icon = ExtResource("5_m57dq")
flat = true
script = ExtResource("9_38eui")

[node name="ColorRect1" type="ColorRect" parent="."]
offset_left = 2012.0
offset_top = 169.0
offset_right = 2730.0
offset_bottom = 887.0
color = Color(0.47451, 0.164706, 0.168627, 1)

[node name="ComoJugar1" type="Sprite2D" parent="ColorRect1"]
position = Vector2(364, 368)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_6yw2w")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2009.0
offset_top = 161.0
offset_right = 2727.0
offset_bottom = 879.0
color = Color(0.47451, 0.164706, 0.168627, 1)

[node name="ComoJugar2" type="Sprite2D" parent="ColorRect2"]
position = Vector2(360, 358)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_y58wi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l53yk")
}

[connection signal="mouse_entered" from="MenuPrincipal/Inicio" to="MenuPrincipal" method="_on_inicio_mouse_entered"]
[connection signal="pressed" from="MenuPrincipal/Inicio" to="MenuPrincipal" method="_on_inicio_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/Opciones" to="MenuPrincipal" method="_on_opciones_mouse_entered"]
[connection signal="pressed" from="MenuPrincipal/Opciones" to="MenuPrincipal" method="_on_opciones_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/Creditos" to="MenuPrincipal" method="_on_creditos_mouse_entered"]
[connection signal="pressed" from="MenuPrincipal/Creditos" to="MenuPrincipal" method="_on_creditos_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/Tutorial" to="MenuPrincipal" method="_on_opciones_mouse_entered"]
[connection signal="pressed" from="MenuPrincipal/Tutorial" to="MenuPrincipal" method="_on_tutorial_pressed"]
[connection signal="mouse_entered" from="MenuPrincipal/Salir" to="MenuPrincipal" method="_on_salir_mouse_entered"]
[connection signal="pressed" from="MenuPrincipal/Salir" to="MenuPrincipal" method="_on_button_pressed"]
